	'B' to 'L' to not conflict with other options.

	* ipmi-chassis/src/ipmi-chassis.h: Remove cmd_set_capabilities,
	which isn't used.

	* ipmi-chassis/src/ipmi-chassis-argp.c (parse_opt),
	ipmi-chassis/src/ipmi-chassis.c (chassis_identify): Fix chassis
	identify usage.

	* ipmi-chassis/src/ipmi-chassis-argp.c,
	ipmi-chassis/ipmi-chassis.8.pre.in: Put periods on ends of help
	messages.

2007-06-05 Raghavendra <raghavendra@zresearch.com>

       * ipmi-chassis/src/ipmi-chassis.c: Implemented Chassis Commands.
	
       * ipmi-chassis/src/ipmi-chassis.h: Updated for Chassis support.
	
	* libfreeipmi/include/freeipmi/ipmi-cmd-spec.h: Added new
	commands.
	
	* libfreeipmi/include/freeipmi/ipmi-chassis-cmds.h: Added Macros
	related to ipmi-chassis.
	
	* libfreeipmi/src/ipmi-chassis-cmds.c: Added Ipmi command
	templates related to ipmi-chassis.
	
	* libfreeipmi/src/udm/ipmi-chassis-cmds-udm.c: Added Library
	functions related to ipmi-chassis.
	
	* libfreeipmi/include/freeipmi/udm/ipmi-chassis-cmds-udm.h: Macros
	related to ipmi-chassis.
	
	* libfreeipmi/include/Makefile.am: Added an entry for
	freeipmi/ipmi-chassis-boot-options-param-spec.h.
	
       * libfreeipmi/include/freeipmi/ipmi-chassis-boot-options-param-spec.h:
       New file.
	
2007-06-04  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-error.h
	(IPMI_ERR_STR_MAX_LEN): Define with number rather than hex.
	
2007-06-02  Albert Chu <chu11@llnl.gov>

	Massive code cleanup.

	* configure.ac: Update lib versions for 0.4.0.

	* common/src/ipmi-common.h: Move portability related things to
	freeipmi-portability.h.

	* Globally re-adjust headers accordingly for above change.

	* Cleanup compile warnings.

	* common/src/freeipmi-portability.h,
	common/src/freeipmi-portability.c (freeipmi_error): Remove
	function, it and error() are no longer used.

	* common/src/freeipmi-portability.h: Remove libintl portability.
	Remove true/false/bool portability.  Remove EBADMSG portability.